BUGFIX. Two scrollbars are being displayed at the same time
Error:
- The default scrollbar is displayed below the scrollbar generated by the `perfect-scrollbar` package.

Solution:
- Applied CSS to hide the default scrollbar.

--- a/src/sass/abstracts/tools/_tools-scrollbar.sass
+++ b/src/sass/abstracts/tools/_tools-scrollbar.sass
@@ -23,6 +23,10 @@
 			-webkit-overflow-scrolling: touch
 			scrollbar-width: none
 
+			&::-webkit-scrollbar
+				display: none
+				width: 0
+
 			.ps__rail-x,
 			.ps__rail-y,
 			.ps__thumb-x,
